<resources>
    <string name="main_title">Photo Map</string>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_reg_user_name">Enter User Name</string>
    <string name="hint_reg_email">Enter Your Email</string>
    <string name="hint_reg_pwd">Create a password</string>
    <string name="hint_reg_pwd_check">Confirm the password</string>

    <string name="pattern_username" translatable="false">[A-Za-z0-9]{%1$d,%2$d}</string>
    <string name="pattern_username_error">User name must be of letters and numbers and be %1$d to %2$d long</string>
    <integer name="min_user_name">5</integer>
    <integer name="max_user_name">25</integer>
    <string name="pattern_email" translatable="false">[A-Za-z0-9\._%-]+@[A-Za-z0-9\.-]+\.[A-Za-z]{2,6}</string>
    <string name="pattern_email_error">Please enter a valid email</string>
    <string name="pattern_pwd" translatable="false">[A-Za-z0-9]{%1$d,%2$d}</string>
    <string name="pattern_pwd_error">Password must be of letters and numbers and be %1$d to %2$d long</string>
    <string name="pattern_pwd_not_match">The passwords do not match!</string>
    <string name="btn_dialog_register">Register</string>
    <integer name="min_pwd">@integer/min_user_name</integer>
    <integer name="max_pwd">@integer/max_user_name</integer>

    <string name="log_out">Log Out</string>
    <string name="tab_map">Map</string>
    <string name="tab_timeline">Timeline</string>
    <string name="option_gallery">Choose from Gallery</string>
    <string name="option_take_photo">Take a picture</string>
    <string-array name="options_add_picture">
        <item>@string/option_gallery</item>
        <item>@string/option_take_photo</item>
    </string-array>
    <string name="photo_save">Save</string>
    <string name="dialog_progress_processing">Processing…</string>
    <string name="fish_lat">17˚26.53´E</string>
    <string name="fish_long">108˚35.92´N</string>
    <string name="btn_from_gallery">Gallery</string>
    <string name="btn_from_camera">Camera</string>
    <string name="permission_explanation">Please consider granting location permission to find your current location</string>
    <string name="location_unknown_try_manual">Location is unknown, try pick some on the map manually.</string>
    <string name="menu_item_filter">Filter</string>
    <string name="search_by_hash_tags">Search by hash tags</string>
    <string name="search_input_hint">#tags</string>
    <string name="search_sample">Holidays</string>
    <string name="search_sample_hint">Start a search, for instance</string>
    <string name="logoff_progress_msg">Please wait while we are logging you off</string>
    <string name="pick_category_least_one">Pick at least one category</string>
    <string name="intent_start_no_data">Required data not provided!</string>
    <string name="no_tags_found_for">No tags found for \'%1$s\'</string>
    <string name="no_data_found">No data found matching your criteria</string>
    <string name="photo_desc_hint">Share your emotions</string>

    <string name="grant_permission_cta">Grant</string>
</resources>
